# demos

./: .gitignore  README.md
cDemo/print/: main.cpp
cDemo/socket/: main.cpp
cDemo/strtok/: main.c
cmakeDemo/advanced/: CMakeLists.txt  readme.txt
cmakeDemo/advanced/client_src/: CMakeLists.txt  clean.sh
cmakeDemo/advanced/server_src/: CMakeLists.txt
cmakeDemo/advanced/util/: Printer.h
cmakeDemo/hello/: CMakeLists.txt  readme.txt
cmakeDemo/hello/include/: hello.h
cmakeDemo/hello/src/: CMakeLists.txt
cmakeDemo/hello/src/main/: CMakeLists.txt  main.c
cmakeDemo/hello/src/util/: CMakeLists.txt  hello.c
cppDemo/boostDemo/equal_range/: main.cpp  makefile
cppDemo/boostDemo/logs/: makefile
cppDemo/boostDemo/logs/file/: log.cpp  log.h  main.cpp  makefile
cppDemo/boostDemo/logs/hello/: main.cpp  makefile  readme.txt
cppDemo/boostDemo/multi_index_container/: main.cpp  makefile
cppDemo/boostDemo/ptree/: config.ini  main.cpp  readme.txt
cppDemo/stdDemo/: readme.txt
cppDemo/stdDemo/multiset/: main.cpp  makefile  readme.txt
cppDemo/stdDemo/operator/: main.cpp
cppDemo/stdDemo/random/: main.cpp  makefile
cppDemo/stdDemo/strtok/: main.cpp
cppDemo/stdDemo/template/: Queue.cpp  Queue.h  main.cpp  makefile  readme.txt
dbDemo/hello/: CMakeLists.txt  main.cpp  makefile
dbDemo/mysql/: main.cpp  readme.txt
fileDemo/cppFile/: file.txt  main.cpp  makefile  test
iceDemo/: readme.txt
iceDemo/ami/: AMIDemo.h  AMIDemo.ice
iceDemo/cmakeV/: readme.txt
iceDemo/cmakeV/forum/: CMakeLists.txt  README.md  clean.sh  readme.txt
iceDemo/cmakeV/forum/interface/: Forum.cpp  Forum.h  Forum.ice
iceDemo/cmakeV/forum/src/: CMakeLists.txt  ForumI.cpp  ForumI.h  main.cpp  nohup.out  start_forum.sh  stop_forum.sh
iceDemo/cmakeV/forum/src/config/: forum_app.xml  forum_node.conf  forum_service.xml
iceDemo/cmakeV/forum/src/data/log/: ForumServerId.err  ForumServerId.out
iceDemo/cmakeV/forum/src/data/node/servers/ForumServerId/config/: config
iceDemo/cmakeV/forum/src/data/node/servers/ServerId/config/: config
iceDemo/cmakeV/forum/src/data/registry/: __catalog  __catalogIndexList  adapters  adapters.replicaGroupId  applications  internal-objects  internal-objects.type  objects  objects.type  serials
iceDemo/cmakeV/forum/test/: CMakeLists.txt  common.h  forum_client.conf  main.cpp  readme.txt
iceDemo/cmakeV/node_server/: clear_ice.sh  readme.txt  start_ice.sh
iceDemo/cmakeV/node_server/forum/: forum_client  forum_server  start_forum.sh  stop_forum.sh  test_forum.sh
iceDemo/cmakeV/node_server/forum/config/: dev.ini  forum_app.xml  forum_registry.conf
iceDemo/cmakeV/node_server/gridNode/: server  start_forum.sh  stop_forum.sh  test_forum.sh
iceDemo/grid/: client.cfg  makefile  readme.txt  registry.cfg  server.cfg
iceDemo/grid/config/: registry.cfg
iceDemo/grid/registry/: __catalog  __catalogIndexList  adapters  adapters.replicaGroupId  applications  internal-objects  internal-objects.type  objects  objects.type  serials
iceDemo/gridNode/: Client.cpp  Server.cpp  config  makefile  readme.txt
iceDemo/gridNode/config/: app.xml
iceDemo/gridNodes/: client.cfg  config  makefile  node2.cfg  readme.txt
iceDemo/gridNodes/config/: node2.cfg  server.cfg
iceDemo/hello/: Printer.ice  readme.txt
iceDemo/makeV/: readme.txt
iceDemo/makeV/ami/: AMIDemo.cpp  Client.cpp  Server.cpp  makefile  readme.txt
iceDemo/makeV/grid/: Client.cpp  Server.cpp
iceDemo/makeV/gridNode/config/: admin.cfg  client.cfg  config  node.cfg  registry.cfg
iceDemo/makeV/gridNodes/: Printer.cpp  Printer.h  readme.txt  server
iceDemo/makeV/gridNodes/config/: app.xml  config  templates.xml
iceDemo/makeV/hello/: .Client.cpp.swp  Printer.cpp  Printer.ice  makefile  readme.txt  server
iceDemo/makeV/replicas/: Server.cpp  makefile
iceDemo/makeV/replicas/config/: admin.cfg  app.xml  client.cfg  replica1.cfg
iceDemo/replica/: Client.cpp  Printer.ice  app.xml  client.cfg  config  node2.cfg
iceDemo/replicas/: Client.cpp  makefile  readme.txt
iceDemo/replicas/config/: master.cfg  node1.cfg  node2.cfg  server.cfg
jsonDemo/json-c/: main.cpp  makefile  readme.txt
jsonDemo/jsoncpp/: main.cpp  makefile  readme.txt
libeventDemo/httpServer/: main.cpp  makefile  readme.txt  server  tool_util.cpp  tool_util.h
makeDemo/makeTest/: child.c  child.h  head1.c  head1.h  hello.c  makefile  parent.c  parent.h
makeDemo/makeTest/makedir/: makefile1  makefile10  makefile11
mysqlDemo/: readme.txt
mysqlDemo/hello/: main.cpp  makefile
protobufDemo/: addressbook.proto  main.cpp  makefile
protobufDemo/clearRem/: addressbook.proto  main.cpp  makefile  readme.txt
protobufDemo/hello/: addressbook.proto  main.cpp  readme.txt  temp.txt
pthreadDemo/pthread/: a.out  pthread_attr.cpp  pthread_cond.cpp  readme.txt
pthreadDemo/pthread/queueCTest/: a.out  itoa.c  queue.h  test.c
pthreadDemo/pthread/queueCppTest/: MQueue.cpp  MQueue.h  a.out  queueTest.cpp
rabbitmqDemo/: makefile  rabbitmq.cpp  rabbitmq.h  readme.txt  reciver.cpp  reciver1.cpp  sender.cpp  sender1.cpp
redisDemo/acl/: readme.txt
redisDemo/acl/hello/: main.cpp  makefile
redisDemo/acl/redis_util/: main.cpp  makefile  readme.txt  redis_util.cpp  redis_util.h
redisDemo/hiredis/hello/: makefile
redisDemo/hiredis/pool/: main.cpp  makefile  readme.txt  redis_pool.cpp  redis_pool.h  redis_util.cpp  redis_util.h
redisDemo/hiredis/poolHello/: makefile
redisDemo/pubSub/: Publish.cpp  Subscribe.cpp  makefile  publish  readme.txt  subscribe
redisDemo/redis/: a.out  common.cpp  common.h  main.cpp  main_asdfasd.cpp  readme.txt  users.cpp  users.h
shellDemo/: cp_dev.sh  cp_v1.sh  dateStr  update.sh
thriftDemo/struct/: TTG.thrift  client.cpp  makefile  server.cpp
timerDemo/: main.cpp  makefile  readme.txt  timer.h
websocketppDemo/: readme.txt
websocketppDemo/hello/: Client.cpp  Server.cpp  makefile
websocketppDemo/hellopp/: Client.cpp  Server.cpp  makefile
websocketppDemo/wsclass/: Client.cpp  Server.cpp  makefile
(+10 files in other folders)
